# butler

./: .gitignore  Ali.hs  Main.hs  README.md  stack.yaml
protolol/: protolol.cabal
protolol/examples/: Duplex.hs
protolol/examples/Protolol/Example/: Common.hs  Duplex.hs  Main.hs  Typed.hs  Untyped.hs  WebSockets.hs
protolol/src/Transit/: Protolol.hs
transit/: transit.cabal
transit/src/Transit/: Types.hs
