name:                protolol
version:             0.1.0.0
synopsis:            Typed protocols
homepage:            https://github.com/nmattia/butler
license:             MIT
author:              Nicolas Mattia
maintainer:          nicolas@nmattia.com
copyright:           (c) 2017 Nicolas Mattia
category:            Tools
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     src/
  ghc-options:         -Wall
  exposed-modules:
                      Transit.Protolol
  build-depends:
                       base
                     , aeson
                     , binary
                     , bytestring
                     , contravariant
                     , transit
                     , store
  default-language:    Haskell2010

executable protolol-examples
  main-is:             Protolol/Example/Main.hs
  other-modules:
                       Protolol.Example.Common
                       Protolol.Example.Duplex
                       Protolol.Example.WebSockets
                       Protolol.Example.Typed
                       Protolol.Example.Untyped
  hs-source-dirs:      examples/
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
                       base
                     , protolol
                     , transit
                     , async
                     , time
                     , indexed
                     , websockets
  default-language:    Haskell2010
